--- a/index.html
+++ b/index.html
@@ -20,26 +20,26 @@
                 <h3>Форма регистрации</h3>
                 <fieldset class="form__fieldset">
                     <div class="form__field">
-                        <input class="form__input" type="text" name="name" pattern="^[А-Я][а-яЁё\s]+$" minlength=2 maxlengt=20 placeholder="Имя" />
+                        <input class="form__input" type="text" name="name" pattern="^([А-Я][а-яЁё\s]+)(-[А-Я][а-яЁё\s]+)?$" minlength=2 maxlengt=20 placeholder="Имя" />
                         <span class="form__error">Имя в формате: Иван</span>
                     </div>
                     <div class="form__field">
-                        <input class="form__input" type="text" name="name" pattern="^[A-Za-z]+@[A-Za-z]+\.[A-Za-z]+" placeholder="E-Mail" />
+                        <input class="form__input" type="text" name="name" pattern="^[0-9A-Za-z](-?[0-9A-Za-z]-?)+[0-9A-Za-z]@[A-Za-z]+\.[A-Za-z]{2,}$" placeholder="E-Mail" />
                         <span class="form__error">e-mail в формате: sega@yandex.ru</span>
                     </div>
                     <div class="form__field">
-                        <input class="form__input" type="text" name="name" placeholder="+7 (123) 456-78-90" pattern="^\+*\d\W*\d\d\d\W*\d\d\d\W*\d\d\W*\d\d" minlength="" maxlength="" />
+                        <input class="form__input" type="text" name="name" placeholder="+7 (123) 456-78-90" pattern="^((\+7)|8)[\s\-\(]?\d{3}[\s\)\-]?(\d{3})[\s-]?\d{2}[\s-]?\d{2}$"/>
                         <span class="form__error">телефон в формате: +7 (123) 456-78-90</span>
                     </div>
                     <div class="form__field">
-                        <input class="form__input" type="text" name="name" pattern="^(https?:\/{2})(w{3}\.)?(((\d{3}\.)*\d{3})|([a-z]+\.[a-z]+))(:\d{2,5})?(\/)?([a-z\._\d]+)?#?" placeholder="Ваш сайт" />
+                        <input class="form__input" type="text" name="name" pattern="^(https?:\/{2})(w{3}\.)?(([a-z][\-a-z]+\.[a-z]{2,})|(\d{1,3}\.\d{1,3}.\d{1,3}\.\d{1,3}))(:\d{2,5})?(\/[a-z]+)*#?$" placeholder="Ваш сайт" />
                         <span class="form__error">URL в формате: http://mysite.ru</span>
                     </div>
                     <button class="form__button" type="submit">Отправить</button>
                 </fieldset>
             </form>
         </div>
-    </main>     
+    </main>
 </body>
 </html>
 
